[package]
name = "simple-disk-benchmark"
edition = "2021"
version = "0.1.9"
authors = ["Jonathan Wight"]
description = "A simple disk benchmark tool"
homepage = "https://github.com/schwa/simple-disk-benchmark-rs"
readme = "README.md"
keywords = ["benchmark", "cli", "disk"]
categories = ["command-line-utilities", "filesystem"]
license = "MIT"
repository = "https://github.com/schwa/simple-disk-benchmark-rs"

[dependencies]
libc = { version = "0.2.171" }
anyhow = "1.0.97"
clap-verbosity-flag = "2.2.3"
colored = "2.2.0"
enum-display-derive = "0.1.1"
humantime = "2.2.0"
indicatif = { version = "0.17.11" }
lazy_static = "1.5.0"
minijinja = { version = "1.0.21" }
nom = "7.1.3"
num-traits = { version = "0.2.19" }
os_info = "3.10.0"
rand = "0.8.5"
rasciigraph = "0.2.0"
regex = { version = "1.11.1", features = ["unicode-perl"] }
serde_json = "1.0.140"
statistical = "1.0.0"

[dependencies.clap]
version = "4.5.35"
features = ["derive"]
optional = false

[dependencies.fern]
version = "0.6.2"
features = ["colored"]
optional = false

[dependencies.log]
version = "0.4.27"
features = []
optional = false

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
optional = false

[dependencies.strum]
version = "0.26.3"
features = ["derive"]
optional = false

[dependencies.time]
version = "0.3.41"
features = ["serde-human-readable", "local-offset"]
optional = false

[dev-dependencies]
tempfile = "3.19.1"
assert_cmd = "2.0.16"
